# FlowgridSDK

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  justfile
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/flowgrid/: Cargo.toml
crates/flowgrid-anthropic/: Cargo.toml
crates/flowgrid-anthropic/src/: client.rs  error.rs  lib.rs  sse.rs  transport.rs
crates/flowgrid-anthropic/src/resources/: batches.rs  beta.rs  messages.rs  mod.rs  models.rs
crates/flowgrid-anthropic/tests/: live_messages.rs
crates/flowgrid-checkpoint/: Cargo.toml
crates/flowgrid-checkpoint/src/: lib.rs
crates/flowgrid-checkpoint/tests/: roundtrip.rs
crates/flowgrid-cli/: Cargo.toml
crates/flowgrid-cli/src/: backend.rs  main.rs
crates/flowgrid-data/: Cargo.toml
crates/flowgrid-data/src/: lib.rs
crates/flowgrid-device/: Cargo.toml
crates/flowgrid-device/src/: lib.rs
crates/flowgrid-edit/: Cargo.toml
crates/flowgrid-edit/src/: lib.rs  memit.rs  quant.rs  rome.rs
crates/flowgrid-eval/: Cargo.toml
crates/flowgrid-eval/src/: lib.rs
crates/flowgrid-ml/: Cargo.toml
crates/flowgrid-ml/examples/: golden_classical_ml.rs  multiclass_golden_ml.rs
crates/flowgrid-ml/src/: lib.rs
crates/flowgrid-model/: Cargo.toml
crates/flowgrid-model/src/: attach_lora.rs  attention.rs  cache.rs  hf_loader.rs  lib.rs  lm.rs  lora.rs  mlp.rs  nano_gpt.rs  norm.rs  rope.rs  sampler.rs
crates/flowgrid-model/src/hf/: gpt2.rs  llama.rs  mistral.rs  mod.rs  qwen.rs
crates/flowgrid-model/tests/: attention_cache_parity.rs  forward_step_parity.rs  golden_logit_hash.rs  gpt2_load_smoke.rs  gqa_forward.rs  hf_loader_arch.rs  llama_decode_weights.rs  lora_attach.rs  lora_merge.rs  merge_nano_gpt.rs  sampler_deterministic.rs
crates/flowgrid-model/tests/fixtures/: README.md
crates/flowgrid-openai/: Cargo.toml
crates/flowgrid-openai/src/: azure.rs  client.rs  error.rs  lib.rs  multipart.rs  pagination.rs  realtime.rs  sse.rs  transport.rs  webhooks.rs
crates/flowgrid-openai/src/resources/: admin.rs  assistants.rs  audio.rs  batches.rs  chat.rs  completions.rs  containers.rs  embeddings.rs  evals.rs  files.rs  fine_tuning.rs  images.rs  mod.rs  moderations.rs  responses.rs  vector_stores.rs
crates/flowgrid-openai/tests/: golden_fixture.rs  live_openai.rs  webhook_verify.rs  wiremock_retry.rs
crates/flowgrid-serve/: Cargo.toml
crates/flowgrid-serve/src/: auth.rs  backend.rs  completion.rs  engine.rs  error.rs  lib.rs  main.rs  openai_compat.rs  ratelimit.rs  scheduler.rs  sse.rs  stream_sse.rs  types.rs
crates/flowgrid-serve/src/handlers/: chat.rs  responses.rs
crates/flowgrid-serve/tests/: openai_shape.rs  openai_stream_shape.rs
crates/flowgrid-tensor/: Cargo.toml
crates/flowgrid-tensor/src/: lib.rs  obs.rs
crates/flowgrid-tokenizer/: Cargo.toml
crates/flowgrid-tokenizer/src/: lib.rs
crates/flowgrid-train/: Cargo.toml
crates/flowgrid-train/src/: checkpoint.rs  clip.rs  lib.rs  loop_train.rs  multi_gpu.rs  schedule.rs
crates/flowgrid-train/tests/: smoke_loss.rs
crates/flowgrid-ui/: Cargo.toml
crates/flowgrid-ui/src/: jobs.rs  main.rs
crates/flowgrid/benches/: hot_path.rs
crates/flowgrid/examples/: anthropic_message.rs  openai_assistants_e2e.rs  openai_chat_stream.rs  openai_responses_stream_accumulate.rs
crates/flowgrid/fuzz/: Cargo.toml
crates/flowgrid/fuzz/fuzz_targets/: sse_chunks.rs
crates/flowgrid/semver/: baseline_rustdoc.json
crates/flowgrid/src/: lib.rs
crates/flowgrid/src/internal/: azure.rs  client.rs  clu.rs  error.rs  execute_options.rs  mod.rs  multipart.rs  oai.rs  otel_http.rs  pagination.rs  realtime.rs  retry_policy.rs  sse.rs  stream_cancel.rs  stream_collect.rs  stream_types.rs  stream_typing.rs  stream_typing_clu.rs  transport.rs  webhooks.rs
crates/flowgrid/src/internal/resources/: admin.rs  assistant_threads.rs  assistants.rs  audio.rs  batches.rs  beta.rs  chat.rs  completions.rs  containers.rs  embeddings.rs  evals.rs  files.rs  fine_tuning.rs  images.rs  messages.rs  mod.rs  models.rs  moderations.rs  paths.rs  responses.rs  usage.rs  vector_stores.rs
crates/flowgrid/tests/: clu_golden_message.rs  clu_live_messages.rs  clu_wiremock_retry.rs  clu_wiremock_retry_cap.rs  contracts.rs  contracts_anthropic.rs  contracts_openai.rs  oai_golden_chat_completion.rs  oai_golden_response.rs  oai_live_openai.rs  oai_webhook_verify.rs  oai_wiremock_request_hook.rs  oai_wiremock_retry.rs  oai_wiremock_retry_cap.rs  oai_wiremock_run_steps.rs  oai_wiremock_sse.rs  oai_wiremock_timeout.rs  serve_sse_shape.rs
crates/flowgrid/tests/anthropic/: golden_message.rs  wiremock_retry.rs
crates/flowgrid/tests/fixtures/: message.json  response_object.json
crates/flowgrid/tests/fixtures/contracts/: anthropic_beta_models_v1_deserialize.json  anthropic_message_v1.json  openai_assistant_v1_deserialize.json  openai_assistants_list_v1_deserialize.json  openai_chat_completion_v1.json  openai_completion_v1_deserialize.json  openai_embedding_v1_deserialize.json  openai_response_v1_deserialize.json  openai_thread_message_v1_deserialize.json  openai_thread_run_steps_list_v1_deserialize.json  openai_thread_run_v1_deserialize.json  openai_thread_v1_deserialize.json
crates/flowgrid/tests/openai/: golden_fixture.rs
crates/flowgrid/tests/openai/fixtures/: chat_completion.json
docs/: RELEASE-flowgrid.md  advisory-supply-chain.md  cycle-review-35m.md  dev-handbook.md  fuzzing.md  http.md  incident-review-checklist.md  kpi-baseline-authority.md  lifecycle-policy.md  loadtest-matrix.md  migration.md  ml-operations-handbook.md  model-comparison-reporting.md  observability.md  ops-readiness-30m.md  profile-pack.md  release-gates-parity.md  resilience.md  runbook-quickstart.md  runtime-resilience-program.md  workload-templates.md
docs/llm/: overview.md
docs/reviews/: q3-2026.md
tools/: build_kpi_achievement_report.py  check_kpi_regression.py  check_train_repro.py  compare_run_reports.py  import_contract.ps1  import_contract.sh  serve_kpi_smoke.py  validate_release_gates.py
(+7 files in other folders)
