[package]
name = "flowgrid-anthropic"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Hand-crafted async Anthropic Claude API client (Python api.md parity)."
repository = "https://github.com/example/flowgrid-sdk"

[lib]
name = "flowgrid_anthropic"
path = "src/lib.rs"

[features]
default = []
full = ["batches", "models", "beta"]
batches = []
models = []
beta = []

[dependencies]
bytes = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
serde_json = "1"
