[package]
name = "flowgrid-checkpoint"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Checkpoint manifest and model persistence helpers for Flowgrid LLM."

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
flowgrid-model = { path = "../flowgrid-model" }
