[package]
name = "flowgrid-checkpoint"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Checkpoint manifest and model persistence helpers for Flowgrid LLM."

[dependencies]
anyhow.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
burn = { workspace = true }
flowgrid-model = { path = "../flowgrid-model" }

[dev-dependencies]
burn-ndarray = { workspace = true }
tempfile = "3"
