[package]
name = "flowgrid-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for Flowgrid LLM (train, generate, serve shim)."
default-run = "flowgrid-llm"

[[bin]]
name = "flowgrid-llm"
path = "src/main.rs"

[dependencies]
flowgrid-tensor = { path = "../flowgrid-tensor" }
flowgrid-model = { path = "../flowgrid-model" }
flowgrid-train = { path = "../flowgrid-train" }
flowgrid-eval = { path = "../flowgrid-eval" }
flowgrid-data = { path = "../flowgrid-data" }
flowgrid-checkpoint = { path = "../flowgrid-checkpoint" }
flowgrid-tokenizer = { path = "../flowgrid-tokenizer" }
burn = { workspace = true }
burn-ndarray = { workspace = true }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["fs"] }
num-traits = "0.2"
rand = "0.8"
