[package]
name = "flowgrid-edit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Knowledge editing (ROME/MEMIT-style hooks) for Flowgrid LLM."

[dependencies]
flowgrid-tensor = { path = "../flowgrid-tensor" }
burn = { workspace = true }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
