[package]
name = "flowgrid-eval"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Evaluation utilities (loss/perplexity) for Flowgrid LLM."

[dependencies]
serde.workspace = true
flowgrid-data = { path = "../flowgrid-data" }
flowgrid-model = { path = "../flowgrid-model" }
flowgrid-train = { path = "../flowgrid-train" }
burn = { workspace = true }
num-traits = "0.2"
