[package]
name = "flowgrid-model"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Decoder LLM modules (nano-GPT, HF safetensors loaders) for Flowgrid."

[dependencies]
flowgrid-tensor = { path = "../flowgrid-tensor" }
burn = { workspace = true }
serde.workspace = true
serde_json.workspace = true
safetensors.workspace = true
thiserror.workspace = true
