[package]
name = "flowgrid-openai"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Hand-crafted async OpenAI API client inspired by openai-node."
repository = "https://github.com/example/flowgrid-openai"

[lib]
name = "flowgrid_openai"
path = "src/lib.rs"

[features]
default = []
full = [
    "files",
    "images",
    "audio",
    "moderations",
    "batches",
    "fine_tuning",
    "evals",
    "assistants",
    "vector_stores",
    "containers",
    "admin",
    "webhooks",
    "azure",
    "realtime",
]
tracing = ["dep:tracing"]
files = []
images = []
audio = []
moderations = []
batches = []
fine_tuning = []
evals = []
assistants = []
vector_stores = []
containers = []
admin = []
webhooks = []
azure = []
realtime = ["dep:tokio-tungstenite", "dep:http"]

[dependencies]
bytes = "1"
futures = "0.3"
mime = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "multipart",
    "stream",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2"
tracing = { version = "0.1", optional = true }
# Webhooks
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
http = { version = "1", optional = true }
# Realtime
tokio-tungstenite = { version = "0.24", optional = true, features = [
    "rustls-tls-webpki-roots",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
serde_json = "1"
