[package]
name = "flowgrid-serve"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OpenAI-shaped HTTP inference server for Flowgrid LLM."

[[bin]]
name = "flowgrid-serve"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
