[package]
name = "flowgrid-serve"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OpenAI-shaped HTTP inference server for Flowgrid LLM."

[[bin]]
name = "flowgrid-serve"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
futures.workspace = true
tower = { workspace = true, features = ["limit"] }
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
burn.workspace = true
burn-ndarray.workspace = true
bytes = "1"
rand = "0.8"
flowgrid-model = { path = "../flowgrid-model" }
flowgrid-checkpoint = { path = "../flowgrid-checkpoint" }
flowgrid-tokenizer = { path = "../flowgrid-tokenizer" }
