[package]
name = "flowgrid-train"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Training loops, AdamW, checkpoints for Flowgrid LLM."

[dependencies]
flowgrid-tensor = { path = "../flowgrid-tensor" }
flowgrid-model = { path = "../flowgrid-model" }
flowgrid-data = { path = "../flowgrid-data" }
burn = { workspace = true }
serde.workspace = true
serde_json.workspace = true
rand = "0.8"
num-traits = "0.2"
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
burn-ndarray = { workspace = true }
