[package]
name = "flowgrid-ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Local web UI shell (REST + SQLite metadata) for Flowgrid LLM."

[[bin]]
name = "flowgrid-ui"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio = { workspace = true, features = ["fs", "process"] }
tower-http = { workspace = true, features = ["trace"] }
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
anyhow.workspace = true
