[package]
name = "flowgrid"
version = "0.2.0"
edition = "2021"
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "Production-oriented OpenAI + Anthropic HTTP client: predictable retries, timeouts, errors, streaming, and observability (feature-gated)."
repository = "https://github.com/pwitt/FlowgridSDK"
homepage = "https://github.com/pwitt/FlowgridSDK"
documentation = "https://docs.rs/flowgrid"
keywords = ["openai", "anthropic", "claude", "api", "async"]
categories = ["api-bindings", "web-programming::http-client"]

[lib]
name = "flowgrid"
path = "src/lib.rs"

[features]
default = ["openai", "anthropic", "tls-rustls"]
# Same as `default`; use `default-features = false` and `--features minimal` in docs/CI.
minimal = ["openai", "anthropic", "tls-rustls"]
# Observability bundle; pair with `full` when you also need uploads, webhooks, etc.
enterprise = ["tracing", "opentelemetry"]
full = [
    "stream-types",
    "files",
    "images",
    "audio",
    "moderations",
    "batches",
    "fine_tuning",
    "evals",
    "assistants",
    "vector_stores",
    "containers",
    "admin",
    "webhooks",
    "azure",
    "realtime",
    "models",
    "beta",
    "tracing",
]
# Exactly one TLS backend must be enabled (`tls-rustls` is on by default).
tls-rustls = ["reqwest/rustls-tls"]
tls-native = ["reqwest/native-tls"]
tracing = ["dep:tracing"]
opentelemetry = ["dep:opentelemetry"]
cancel = []
# Typed SSE `data:` JSON helpers (provider-specific feature also required).
stream-types = []
openai = []
anthropic = []
files = []
images = []
audio = []
moderations = []
batches = []
fine_tuning = []
evals = []
assistants = []
vector_stores = []
containers = []
admin = []
webhooks = []
azure = []
realtime = ["dep:tokio-tungstenite", "dep:http"]
models = []
beta = []
# Derive retry sleep from provider rate-limit reset headers when `Retry-After` is absent (additive).
rate-aware-retry = []
# Documented profile hook for OpenAI-shaped HTTP gateways; see README.
compat-openai = []
# Unstable hook for `cargo fuzz` (SSE decoder); not covered by semver.
sse-fuzz = []

[dependencies]
bytes = "1"
futures = "0.3"
httpdate = "1"
mime = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "multipart",
    "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2"
tracing = { version = "0.1", optional = true }
opentelemetry = { version = "0.27", optional = true }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
http = { version = "1", optional = true }
tokio-tungstenite = { version = "0.24", optional = true, features = [
    "rustls-tls-webpki-roots",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
serde_json = "1"

[[bench]]
name = "hot_path"
harness = false

[[example]]
name = "openai_chat_stream"
required-features = ["openai"]

[[example]]
name = "anthropic_message"
required-features = ["anthropic"]

[[example]]
name = "openai_assistants_e2e"
required-features = ["openai", "assistants"]

[[example]]
name = "openai_responses_stream_accumulate"
required-features = ["openai", "stream-types"]
